--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
     font-size: 24px;
     margin: 0;
 }
-/*
+
 .navbar ul {
     list-style-type: none;
     margin: 0;
@@ -46,7 +46,7 @@ body {
     background-color: #575757;
     border-radius: 4px;
 }
-*/
+
 
 .hero {
     background: url('images/13.jpg') no-repeat center center/cover;
@@ -213,7 +213,7 @@ ul{
 }
 
 
-/* new nav bar*/
+/* new nav bar
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 * {
   box-sizing: border-box;
