--- a/categories.css
+++ b/categories.css
@@ -15,7 +15,9 @@ body {
     width: 80%;
     margin: 0 auto;
 }
-
+.container h2 {
+    color: white;
+}
 .logo {
     font-size: 24px;
     margin: 0;
@@ -47,6 +49,8 @@ body {
 
 .categories {
     padding: 50px 0;
+
+    background-image: url('images/gradient-backgrounds.webp');
 }
 
 .categories h2 {
