--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ body {
     padding: 10px 0;
 }
 
+.a1{
+    color: white;
+    text-decoration: none;
+}
 .container {
     width: 80%;
     margin: 0 auto;
@@ -87,14 +91,16 @@ body {
 }
 
 .show {
-    background-color: #f9f9f9;
+    background-color:burlywood;
+    background-image: url('images/grad1.jpg');
     padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
+    border: 1px solid black;
+    border-radius: 12px;
     width: 200px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
+
 
 .show img {
     max-width: 100%;
@@ -170,7 +176,7 @@ ul{
 	width: 250px;
 }
 .footer-col ul li:not(:last-child){
-	margin-top: auto;
+	margin-bottom: 0px;
 }
 .footer-col ul li a{
 	font-size: 16px;
