--- a/panchyat.css
+++ b/panchyat.css
@@ -85,13 +85,14 @@
   }
   
   .video-item {
-    background-color: #fff;
+    background-image: url(images/gradient-backgrounds.webp);
     border: 1px solid #ccc;
     margin: 10px;
     padding: 10px;
     width: calc(25% - 20px);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
+    
   }
   
   .video-item:hover {
@@ -101,16 +102,25 @@
   .video {
     width: 100%;
     height: 200px;
+  
   }
   
   .video-info {
     text-align: center;
     padding: 10px 0;
+    
+  }
+  .video-info h2{
+    color: black;
+  }
+  .video-info p{
+    color: #f4f4f4;
   }
   
   .video-title {
     font-size: 18px;
     margin-bottom: 5px;
+    background-color: white;
   }
   
   .video-date {
@@ -121,7 +131,7 @@
   
   .download-button {
     display: inline-block;
-    background-color: #007bff;
+    background-color: red;
     color: #fff;
     padding: 8px 16px;
     text-decoration: none;
