--- a/webseries.css
+++ b/webseries.css
@@ -43,10 +43,10 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-}
+    background-image: url(images/webseries.jpg);}
 
 .show-item {
-    background-color: #e0e0e0;
+    background-image: url(images/gradient-backgrounds.webp);
     border-radius: 8px;
     margin: 1rem;
     padding: 1rem;
@@ -68,13 +68,16 @@ main {
 .show-details h3 {
     margin: 0.5rem 0;
     font-size: 1.1rem;
-    color: #333;
+    color: white;
+    text-decoration: none;
+    
 }
 
 .show-details p {
     margin: 0;
     font-size: 0.9rem;
-    color: #666;
+    color: white;
+    text-decoration: none;
 }
 
 footer {
