--- a/movies.css
+++ b/movies.css
@@ -114,6 +114,19 @@ nav {
   background-color: #0056b3;
 }
 
+.watch-btn{
+  background-color: #007BFF;
+  color: white;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+
+}
+.watch-btn:hover{
+  background-color: #0056b3;
+
+}
 
 /* Adjustments for responsiveness */
 @media (max-width: 768px) {
@@ -267,7 +280,7 @@ header {
 #clear-filter{
   background-color: rgb(11, 0, 128);
 
-}
+}z
 #clear-filter:hover{
     background: linear-gradient(to right, #007bff, #00bfff);
 
@@ -275,6 +288,36 @@ header {
 #apply-filter:hover{
   background: linear-gradient(to right, #ff8000, #088db9);
 
+}
+
+/* Styling for the search bar and button in the navigation bar */
+.nav-container .search-bar {
+  display: flex;
+  align-items: center;
+  margin-left: 15px;
+}
+
+.nav-container .search-bar input[type="text"] {
+  padding: 5px;
+  margin-right: 5px;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  font-size: 1em;
+}
+
+.nav-container .search-bar button {
+  padding: 5px 10px;
+  background-color: #007bff;
+  border: none;
+  border-radius: 3px;
+  color: white;
+  cursor: pointer;
+  font-size: 1em;
+  transition: background-color 0.3s;
+}
+
+.nav-container .search-bar button:hover {
+  background-color: #0056b3;
 }
 
 
